 * Fixed problem in manage_proj_update.php which gave a warning when editing projects with empty upload file paths.
 * Fixed problem with ambiguous column names in queries when using the text search or applying filters
 * Fixed problem with print_assign_to_option_list() not selecting the current user.
 * Fixed security hole in summary_graph_functions.php (Joao Gouveia: tharbad@kaotik.org)
 * Improved the behaviour of sorting the tables of users and projects in 'Manage'.
 * In the view bugs, when all projects is selected the project name is now displayed in smaller font over the category.
 * Made 'light grey' the default color for 'closed'.
 * Made 'normal' default priority for new bugs.
 * Merged default/config_inc1.php and default/config_inc2.php in config_defaults_inc.php
 * Modified & in URLs &amp; to conform with standards.
 * Modified all php files to use single quotes where double quotes were unnecessary.
 * Modified all string files to use single quotes instead of double quotes.
 * Modified core_email_API.php to send a content-type header in emails.
 * Modified core_html_API.php to print a META-tag defining the charset.
 * Modified core_print_API.php to escape double quotes in text fields, instead of replacing them by single quotes.
 * Modified core_user_API.php, login.php and login_page.php to send the user back to the referring page after login.
 * Modified form elements to be standards compliant.
 * Modified input checked variables to be prefixed by $c_.
 * Moved admin_* scripts into admin/ folder.
 * Quoted various text values retrieved from a database and used in a database query.
 * Removed French2 localization (out of date, without HTML entities. Replaced by new French localization).
 * Removed get_status_bgcolor from core_helper_API.php and all files using it, in favor of get_status_color.
 * Removed HTML entities from all localization files.
 * Removed most file variables from default/config_inc2.php.